--- a/source/sass/global/sizes.scss
+++ b/source/sass/global/sizes.scss
@@ -1,4 +1,9 @@
+//breakpoints
+
 $small-max-width: 767px;
 $medium-width: 768px;
 $large-width: 1440px;
 $medium-max-width: 1439px;
+
+//block sizes
+$card-border-radius-small: 10px;
