--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,9 +14,11 @@
 @import "blocks/buttons-line.scss";
 @import "blocks/card-list.scss";
 @import "blocks/choose-companion.scss";
+@import "blocks/companions-container.scss";
 @import "blocks/companions-list.scss";
 @import "blocks/companions.scss";
 @import "blocks/contact-list.scss";
+@import "blocks/companions-operations";
 @import "blocks/contacts.scss";
 @import "blocks/container.scss";
 @import "blocks/countries.scss";
