--- a/source/sass/blocks/choose-companion.scss
+++ b/source/sass/blocks/choose-companion.scss
@@ -2,6 +2,16 @@
   background-color: $basic-yellow;
   padding-top: 26px;
   padding-bottom: 22px;
+  border-radius: 20px;
+  max-width: 625px;
+
+  @media (min-width: $medium-width) {
+    // max-height: 550px;
+  }
+
+  @media (min-width: $large-width) {
+    max-height: 815px;
+  }
 }
 
 .choose-companion__caption{
@@ -16,4 +26,14 @@
 
 .choose-companion__line{
   border-top: 1px solid #F3C72B;
+}
+
+.choose-companion__br{
+  @media (min-width: $medium-width) and (max-width: $medium-max-width) {
+    display: none;
+  }
+}
+
+.card-list__flags--margin{
+  margin-top: 30px;
 }
