--- a/source/sass/blocks/hashtag-list.scss
+++ b/source/sass/blocks/hashtag-list.scss
@@ -1,6 +1,7 @@
 .hashtag-list{
   list-style-type: none;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  padding-inline-start: 0
 }
 
 .hashtag-list__item{
