--- a/source/sass/blocks/icon.scss
+++ b/source/sass/blocks/icon.scss
@@ -1,4 +1,5 @@
 .icon{
+  fill: #101D41
 }
 
 .icon--main-theme{
@@ -43,12 +44,4 @@
 
 .icon--light{
   fill: #ffffff;;
-}
-
-.icon--active{
-  fill: #101D41;
-}
-
-.icon--disabled{
-  opacity: 0.15;
 }
