--- a/source/sass/blocks/dataset.scss
+++ b/source/sass/blocks/dataset.scss
@@ -4,17 +4,10 @@
 
 .dataset__legend{
   @include text(16px, bold, 18px, $basic-blue-light);
-
-  @media (min-width: $medium-width) and (max-width: $medium-max-width) {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, 50%);
-    padding: 0 5px;
-  }
 }
 
 .dataset__change-tags{
   width: 100%;
+  margin-top: 10px;
   @include text(16px, normal, 18px, $special-grey);
 }
