--- a/source/sass/blocks/user-info.scss
+++ b/source/sass/blocks/user-info.scss
@@ -6,17 +6,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  position: relative;
 
   @media (min-width: $large-width) {
-    flex-direction: row-reverse;
     justify-content: space-between;
-    align-items: center;
-  }
-}
-
-.user-info__level{
-  @media (min-width: $medium-width) and (max-width: $medium-max-width){
-    order: 1;
+    align-items: flex-start;
   }
 }
 
@@ -40,16 +34,83 @@
   padding-bottom: 43px;
 }
 
-.user-info__avatar{
+
+.user-info__level{
+  width: 40%;
+  text-align: right;
+
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
+    order: 1;
+    width: 30%;
+  }
+
+  @media (min-width: $large-width){
+    order: 1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: -150px;
+    margin-right: 390px;
+    width: auto;
+  }
+}
+
+.user-info__avatar{
+  width: 45%;
+  text-align: left;
+  @media (min-width: $medium-width) and (max-width: $medium-max-width){
+    order: 3;
+    width: 30%;
+  }
+
+  @media (min-width: $large-width){
     order: 2;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 80px;
+    margin-top: -105px;
+    width: auto;
+  }
+}
+
+.user-info__avatar--small{
+  width: 100px;
+  height: 100px;
+  @media (min-width: $medium-width) {
+    display: none;
+  }
+}
+
+.user-info__avatar--medium{
+  display: none;
+  @media (min-width: $medium-width){
+    display: block;
+    width: 94px;
+    height: 94px;
+  }
+
+  @media (min-width: $large-width){
+    display: block;
+    width: 190px;
+    height: 190px;
   }
 }
 
 .user-info__change-photo{
   width: 100%;
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
+    order: 4;
+  }
+
+  @media (min-width: $large-width){
     order: 3;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 160px;
+    margin-top: -20px;
+    width: auto;
   }
 }
 
@@ -57,7 +118,14 @@
   width: 100%;
   margin-top: 30px;
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
+    order: 5;
+  }
+
+  @media (min-width: $large-width){
     order: 4;
+    width: 45%;
+    margin-top: 25px;
+    height: 105px;
   }
 }
 
@@ -65,6 +133,28 @@
   width: 100%;
   margin-top: 25px;
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
-    order: 5;
+    order: 2;
+    margin-top: 0;
+    width: 30%;
   }
+
+  @media (min-width: $large-width){
+    order: 5;
+    width: 45%;
+    height: 105px;
+  }
+}
+
+.user-info__legend{
+  @media (min-width: $medium-width) {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    padding: 0 5px;
+  }
+}
+
+.user-info__legend--left{
+  left: 10%;
 }
