--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,7 @@
 @import "blocks/companions-operations";
 @import "blocks/contacts.scss";
 @import "blocks/container.scss";
+@import "blocks/continents-list.scss";
 @import "blocks/countries.scss";
 @import "blocks/country-description-list.scss";
 @import "blocks/country-list.scss";
