--- a/source/sass/blocks/icon-list.scss
+++ b/source/sass/blocks/icon-list.scss
@@ -21,10 +21,12 @@
 
 .icon-list__item{
   display: flex;
+  align-items: center;
 }
 
 .icon-list__item--stuck{
   margin-right: 0;
+  // display: block;
 }
 
 .icon-list__mappoint{
