--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -5,8 +5,26 @@
 
 .site-list__link{
   @include text(30px, 500, 35px, #192144);
-}
 
+  @media (min-width: $medium-width) {
+    font-size: 60px;
+    line-height: 71px;
+  }
+
+  @media (min-width: $large-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  &:hover{
+    color: $basic-yellow;
+  }
+
+  &:active, &:focus{
+    color: $basic-yellow;
+    opacity: 0.3;
+  }
+}
 
 .site-list__link--light{
   color: #ffffff;
