--- a/source/sass/blocks/countries.scss
+++ b/source/sass/blocks/countries.scss
@@ -59,3 +59,65 @@
     justify-content: center;
   }
 }
+
+.countries__card-info{
+  text-align: left;
+}
+
+.countries__flag{
+  margin-top: -10px;
+  margin-left: 25px;
+  height: 24px;
+
+  @media (min-width: $medium-width) {
+    height: 47px;
+    margin-top: -45px;
+    margin-left: 410px;
+  }
+}
+
+.countries__visits{
+  display: flex;
+  justify-content: flex-start;
+  margin: 0;
+}
+
+.countries__cards{
+  @media (min-width: $medium-width) {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
+
+.countries__description{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media (min-width: $medium-width) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.countries__visists-count{
+  margin-right: 25px;
+
+  @media (min-width: $medium-width) {
+    margin-right: 0;
+    margin-left: 25px;
+  }
+}
+
+.countries__photo{
+  // height: 110px;
+
+  @media (min-width: $medium-width) {
+    height: 140px;
+    width: 550px;
+  }
+}
+
+.countries__item{
+  width: 100%;
+}
