--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -37,6 +37,16 @@
   line-height: 16px;
   padding-top: 16px;
   color: $special-grey;
+
+  &:hover{
+    color: $special-grey;
+    opacity: 0.6;
+  }
+
+  &:active, &:focus{
+    color: $special-grey;
+    opacity: 0.3;
+  }
 }
 
 .page-footer__list{
@@ -48,3 +58,4 @@
   display: flex;
   justify-content: space-between;
 }
+
