--- a/source/sass/blocks/visits-list.scss
+++ b/source/sass/blocks/visits-list.scss
@@ -3,6 +3,8 @@
 }
 
 .visits-list__item{
+  display: flex;
+  flex-direction: column;
   margin-left: 24px;
   margin-right: 24px;
   margin-top: 26px;
@@ -23,6 +25,10 @@
 }
 
 .visits-list__caption{
+  margin-inline-start: 0;
+}
+
+.visits-list__count{
   @include text(16px, 500, 18px, $special-grey);
   opacity: 0.3;
 }
