--- a/source/sass/blocks/card-list.scss
+++ b/source/sass/blocks/card-list.scss
@@ -116,6 +116,15 @@
   @media (min-width: $medium-width) {
     min-width: 150px;
   }
+
+  &:hover{
+    color: $basic-blue-light;
+  }
+
+  &:active, &:focus{
+    color: $basic-blue-light;
+    opacity: 0.3;
+  }
 }
 
 .card-list__offline{
