--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "global/sizes.scss";
 
 //Blocks
+@import "blocks/tooltip.scss";
 @import "blocks/container.scss";
 @import "blocks/icon-list.scss";
 @import "blocks/icon.scss";
