--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -85,4 +85,12 @@
     font-size: 28px;
     line-height: 28px;
   }
+
+  &:hover{
+    opacity: 0.7;
+  }
+
+  &:active, &:focus{
+    opacity: 0.3;
+  }
 }
