--- a/source/sass/blocks/tooltip.scss
+++ b/source/sass/blocks/tooltip.scss
@@ -1,10 +1,15 @@
 .tooltip{
   @include text(14px, normal, 16px, #FFFFFF);
+  padding: 5px;
   border: 1px solid #000000;
   background-color: $special-blue-dark;
-  padding: 5px;
-
   background: none repeat scroll 0 0 $special-blue-dark;
+
+  @media (min-width: $medium-width) {
+    padding: 15px;
+    font-size: 18px;
+    line-height: 18px;
+  }
 
   &:after, &::before{
     bottom: 100%;
