--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,5 +1,6 @@
 .button{
   background-color: $basic-yellow;
+  border: none;
   border-radius: 40px;
   text-decoration: none;
 
@@ -33,20 +34,29 @@
   fill: $basic-blue-light;
 }
 
-.button--disable{
+.button--disabled{
   opacity: 0.15;
+
 }
 
 .button--like{
   fill: #F02323;
 }
 
-.button--like-disable{
+.button--like-disabled{
   opacity:0.5;
 }
 
 .button--light-theme{
   background-color: #ffffff;
+
+  &:hover{
+    background-color: #ffffff;
+  }
+
+  &:active, &:focus{
+    background-color: #ffffff;
+  }
 }
 
 .button--arrow{
@@ -74,4 +84,25 @@
 
 .button__map-icon{
   background-color: $blue;
+}
+
+.button--togle{
+  &:hover{
+    opacity: 0.7;
+  }
+
+  &:active, &:focus{
+    opacity: 0.3;
+  }
+}
+
+
+.button--toggle-disable{
+  &:hover{
+    opacity: 0.3;
+  }
+
+  &:active, &:focus{
+    opacity: 0.1;
+  }
 }
