--- a/source/sass/blocks/icon.scss
+++ b/source/sass/blocks/icon.scss
@@ -1,19 +1,29 @@
+@mixin icon($height: 20px, $width: 20px, $padding: 10px){
+  height:$height;
+  width: $width;
+  padding: $padding;
+}
+
 .icon{
   fill: #101D41;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
   text-align: center;
   line-height: 20px;
   vertical-align: middle;
-  padding: 10px;
+  height: 20px;
+  width: 20px;
+}
+
+.icon--background-padding{
+  padding: 12px;
+  border-radius: 50%;
 
   @media (min-width: $medium-width) {
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-    padding: 15px;
+    padding: 21px;
   }
+}
+
+.icon--disabled{
+  opacity: 0.15;
 }
 
 .icon__social{
