--- a/source/sass/blocks/plan-list.scss
+++ b/source/sass/blocks/plan-list.scss
@@ -48,11 +48,6 @@
   }
 
   @media (min-width: $large-width) {
-    // display: flex;
-    // justify-content: space-between;
-    // padding-right: 45px;
-    // padding-top: 20px;
-    // padding-left: 40px;
     border-top: none;
   }
 }
@@ -73,5 +68,17 @@
   @media (min-width: $medium-width) {
     flex-direction: row;
     margin-top: 0;
+  }
+
+  &:hover{
+    color: #000000;
+    opacity: 0.6;
+    background-color: transparent;
+  }
+
+  &:active, &:focus{
+    color: #000000;
+    opacity: 0.1;
+    background-color: transparent;
   }
 }
