--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -89,23 +89,19 @@
 .promo__traveller-icon{
   margin-top: 10px;
   margin-left: 80px;
+  width: 192px;
+  height: 255px;
 
   @media (min-width: $medium-width) {
     margin-left: 0;
+    width: 372px;
+    height: 451px;
   }
 
-  @media (min-width: $large-width) {
-    display: none;
-    order: 2;
-  }
-}
-
-.promo__traveller-icon__large{
-  margin-top: 10px;
-  margin-left: 80px;
-  display: none;
   @media (min-width: $large-width) {
     display: flex;
+    width: 431px;
+    height: 640px;
   }
 }
 
