--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -17,20 +17,20 @@
 }
 
 .page-footer__logo-mobile{
-  fill: orange;
-  display: block;
-  @media (min-width: $medium-width){
-    display: none;
-  }
+  // fill: orange;
+  // display: block;
+  // @media (min-width: $medium-width){
+  //   display: none;
+  // }
 }
 
-.page-footer__logo{
-  display: none;
-  @media (min-width: $medium-width){
-      display: block;
-      text-align: center;
-  }
-}
+// .page-footer__logo{
+//   display: none;
+//   @media (min-width: $medium-width){
+//       display: block;
+//       text-align: center;
+//   }
+// }
 
 .page-footer__developed-caption{
   margin-right: 23px;
