--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -79,6 +79,8 @@ padding-bottom: 25px;
 }
 
 .users__photo{
+  width: 100%;
+  height: 100%;
   @media (min-width: $medium-width) {
     max-height: 365px;
   }
